overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
spec:
  tls:
    - hosts:
        - dev.ourlim.scg.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: dev.ourlim.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: be-service
                port:
                  number: 80
            path: /api(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
